# just-repo

./: README.md  package.json  pnpm-lock.yaml  turbo.json
apps/next/: package.json
apps/next/app/: page.tsx
apps/next/lib/: env.ts
apps/server/: Cargo.toml  package.json  vercel.json
apps/server/api/: main.rs
