[package]
name = "just-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
vercel_runtime = { version = "2.1.0", features = ["axum"] }
dotenvy = "0.15"
tower-http = { version = "0.6.8", features = ["cors"] }

[[bin]]
name = "main"
path = "api/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
